--- a/css/resume.css
+++ b/css/resume.css
@@ -372,6 +372,11 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     width:100%;
     top:0;
     height: 100%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
 }
 .full-layout .panel-left{
@@ -416,7 +421,9 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     padding:10px;
 }
 .full-layout .panel-right{
-    flex:1;
+    -webkit-box-flex:1;
+    -webkit-flex:1;
+    flex:1
     height: 100%;
     overflow: hidden;
     overflow-y:scroll;
@@ -428,7 +435,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     color: #707070;
     background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-    padding:20px;
+    padding:20px 30px 20px 20px;
     margin:0 0 20px; 
 }
 .background-card .mobile-title{
@@ -459,5 +466,36 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     font-size:12px;
     color:#707070;
 }
-
+@media screen and (max-width:800px) {
+    .full-layout{
+        -webkit-box-orient:vertical;
+        -webkit-flex-direction:column;
+        flex-direction:column
+    }
+    .full-layout .panel-left{
+        padding: 20px 0;
+        width: auto;
+    }
+    .profile-card-t{
+        display: -webkit-box;
+        display: -moz-box;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex;
+    }
+    .panel-left .profile-card-photo{
+        padding: 0;
+        padding-left:35px;
+    }
+    .panel-left .profile-card-text{
+        padding: 0;
+        padding-left:40px;
+        padding-top:20px;
+    }
+    .panel-left .contact-details .detail{
+        display: inline-block;
+        margin-right:20px;
+    }
+}
 
