--- a/css/resume.css
+++ b/css/resume.css
@@ -470,7 +470,8 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     .full-layout{
         -webkit-box-orient:vertical;
         -webkit-flex-direction:column;
-        flex-direction:column
+        flex-direction:column;
+        height: auto;
     }
     .full-layout .panel-left{
         padding: 20px 0;
@@ -496,6 +497,10 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     .panel-left .contact-details .detail{
         display: inline-block;
         margin-right:20px;
+    }
+    .full-layout .panel-right{
+        overflow-y: hidden;
+        height: auto;
     }
 }
 
