--- a/css/resume.css
+++ b/css/resume.css
@@ -423,7 +423,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
 .full-layout .panel-right{
     -webkit-box-flex:1;
     -webkit-flex:1;
-    flex:1
+    flex:1;
     height: 100%;
     overflow: hidden;
     overflow-y:scroll;
@@ -466,6 +466,10 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     font-size:12px;
     color:#707070;
 }
+.background-card .content .header p.common-p{
+    font-size:14px;
+    color: #29c8cf;
+}
 @media screen and (max-width:800px) {
     .full-layout{
         -webkit-box-orient:vertical;
@@ -476,6 +480,8 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     .full-layout .panel-left{
         padding: 20px 0;
         width: auto;
+        color:#000;
+        background:#f1f2f6;
     }
     .profile-card-t{
         display: -webkit-box;
