--- a/css/resume.css
+++ b/css/resume.css
@@ -468,7 +468,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
 }
 .background-card .content .header p.common-p{
     font-size:14px;
-    color: #29c8cf;
+    color:#333;
 }
 @media screen and (max-width:800px) {
     .full-layout{
