--- a/css/resume.css
+++ b/css/resume.css
@@ -1,4 +1,23 @@
 h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
+@font-face {
+    font-family: 'icomoon';
+    src: url('../fonts/icomoon.eot?9yug7q');
+    src: url('../fonts/icomoon.eot?9yug7q#iefix') format('embedded-opentype'),url('../fonts/icomoon.ttf?9yug7q') format('truetype'),url('../fonts/icomoon.woff?9yug7q') format('woff'),url('../fonts/icomoon.svg?9yug7q#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"],[class*=" icon-"] {
+    font-family: 'icomoon'!important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 ::-webkit-scrollbar  
 {  
     width:5px;  
@@ -15,6 +34,246 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     border-radius: 10px;  
     background-color:rgba(255,255,255,0.3);  
 }  
+.icon-instagram:before {
+    content: "\e905";
+}
+
+.icon-trophy:before {
+    content: "\e605";
+}
+
+.icon-office:before {
+    content: "\e606";
+}
+
+.icon-clock:before {
+    content: "\e60a";
+}
+
+.icon-reddit:before {
+    content: "\e609";
+}
+
+.icon-telegram:before {
+    content: "\e904";
+}
+
+.icon-flickr:before {
+    content: "\f16e";
+}
+
+.icon-medium:before {
+    content: "\f23a";
+}
+
+.icon-heart:before {
+    content: "\f004";
+}
+
+.icon-book:before {
+    content: "\f02d";
+}
+
+.icon-linkedin:before {
+    content: "\f08c";
+}
+
+.icon-twitter:before {
+    content: "\f099";
+}
+
+.icon-github:before {
+    content: "\f09b";
+}
+
+.icon-link:before {
+    content: "\f0c1";
+}
+
+.icon-bars:before {
+    content: "\f0c9";
+}
+
+.icon-pinterest:before {
+    content: "\f0d2";
+}
+
+.icon-googleplus:before {
+    content: "\f0d5";
+}
+
+.icon-circle:before {
+    content: "\f111";
+}
+
+.icon-code:before {
+    content: "\f121";
+}
+
+.icon-youtube:before {
+    content: "\f167";
+}
+
+.icon-stackoverflow:before {
+    content: "\f16c";
+}
+
+.icon-bitbucket:before {
+    content: "\f171";
+}
+
+.icon-tumblr:before {
+    content: "\f173";
+}
+
+.icon-dribbble:before {
+    content: "\f17d";
+}
+
+.icon-skype:before {
+    content: "\f17e";
+}
+
+.icon-foursquare:before {
+    content: "\f180";
+}
+
+.icon-gittip:before {
+    content: "\f184";
+}
+
+.icon-gratipay:before {
+    content: "\f184";
+}
+
+.icon-stackexchange:before {
+    content: "\f18d";
+}
+
+.icon-vimeo:before {
+    content: "\f194";
+}
+
+.icon-graduation-cap:before {
+    content: "\f19d";
+}
+
+.icon-language:before {
+    content: "\f1ab";
+}
+
+.icon-child:before {
+    content: "\f1ae";
+}
+
+.icon-behance:before {
+    content: "\f1b5";
+}
+
+.icon-spotify:before {
+    content: "\f1bc";
+}
+
+.icon-soundcloud:before {
+    content: "\f1be";
+}
+
+.icon-codepen:before {
+    content: "\f1cb";
+}
+
+.icon-hackernews:before {
+    content: "\f1d4";
+}
+
+.icon-lastfm:before {
+    content: "\f202";
+}
+
+.icon-angellist:before {
+    content: "\f209";
+}
+
+.icon-facebook:before {
+    content: "\f230";
+}
+
+.icon-meetup .path1:before {
+    content: "\e901";
+    color: rgb(255,255,255);
+}
+
+.icon-meetup .path2:before {
+    content: "\e902";
+    margin-left: -1.5em;
+    color: rgb(240,1,1);
+}
+
+.icon-meetup .path3:before {
+    content: "\e903";
+    margin-left: -1.5em;
+    color: rgb(3,3,3);
+}
+
+.icon-blogger:before {
+    content: "\e900";
+}
+
+.icon-exercism:before {
+    content: "\e601";
+}
+
+.icon-profile:before {
+    content: "\e600";
+}
+
+.icon-tools:before {
+    content: "\e034";
+}
+
+.icon-location:before {
+    content: "\e602";
+}
+
+.icon-mail:before {
+    content: "\e603";
+}
+
+.icon-phone:before {
+    content: "\e03f";
+}
+
+.icon-newspaper:before {
+    content: "\e607";
+}
+
+.icon-dots-three-horizontal:before {
+    content: "\e60b";
+}
+
+.icon-thumbs-up:before {
+    content: "\e604";
+}
+
+.icon-chevron-down:before {
+    content: "\e60c";
+}
+
+.icon-chevron-up:before {
+    content: "\e60d";
+}
+
+.icon-dots-three-horizontal:before {
+    content: "\e60b";
+}
+
+.icon-thumbs-up:before {
+    content: "\e604";
+}
+
+.icon-board:before {
+    content: "\e608";
+}
 .about-body {
     font-family: "Helvetica Neue, Helvetica, Arial, sans-serif";
 	left:0;
@@ -36,8 +295,8 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     overflow: hidden;
     opacity: 0;
     margin-top: 70px;
-    -webkit-transform: translate(-50%, -65%);
-    transform: translate(-50%, -65%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     -webkit-border-radius: 50%;
     border-radius: 50%;
     -webkit-animation: 
@@ -397,6 +656,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     text-align: center;
 }
 .panel-left .profile-card-photo img{
+    cursor:pointer;
     width: 100px;
     height: 100px;
     display: inline-block;
@@ -470,7 +730,21 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     font-size:14px;
     color:#333;
 }
+.dlown{
+    position: fixed;
+    width:60px;
+    height:60px;
+    border-radius:40px;
+    background:#ff4e63;
+    color:#fff;
+    bottom:20px;
+    right:20px;
+    font-size:30px;
+}
 @media screen and (max-width:800px) {
+    .dlown{
+        display:none;
+    }
     .full-layout{
         -webkit-box-orient:vertical;
         -webkit-flex-direction:column;
@@ -516,6 +790,50 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     }
     .background-card .content dd{
         margin-left:16px;
+    }
+    .profile-card{
+        overflow:auto;
+    }
+    .profile-card .card-body{
+        height:auto;
+        overflow: scroll;
+    }
+    .profile-card:hover .card-body{
+        height:auto;
+        overflow:auto;
+    }
+    @-webkit-keyframes materia {
+        0% {
+            background: #E0E0E0
+        }
+        50% {
+            -webkit-border-radius: 0;
+            border-radius: 0
+        }
+        100% {
+            width: 100%;
+            height: 100%;
+            background: #1f1f2a;
+            -webkit-border-radius: 0;
+            border-radius: 0
+        }
+    }
+
+    @keyframes materia {
+        0% {
+            background: #E0E0E0
+        }
+        50% {
+            -webkit-border-radius: 0;
+            border-radius: 0
+        }
+        100% {
+            width: 100%;
+            height: 100%;
+            background: #1f1f2a;
+            -webkit-border-radius: 0;
+            border-radius: 0
+        }
     }
 }
 
