--- a/css/resume.css
+++ b/css/resume.css
@@ -792,7 +792,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
         margin-left:16px;
     }
     .profile-card{
-        -webkit-overflow-scrolling: touch
+        -webkit-overflow-scrolling: touch;
         overflow:auto;
     }
     .profile-card .card-body{
