--- a/css/resume.css
+++ b/css/resume.css
@@ -1,3 +1,4 @@
+body{margin:0;background:#f1f2f6}
 h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
 @font-face {
     font-family: 'icomoon';
@@ -367,6 +368,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
 	transition:300ms;
 	opacity: 0;
 	color:#b0b3c8;
+    background:#1f1f2a;
 	position: relative;
 	height: 140px;
 	box-sizing: border-box;
@@ -686,7 +688,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     flex:1;
     height: 100%;
     overflow: hidden;
-    overflow-y:scroll;
+    overflow-y:auto;
     box-sizing: border-box;
     padding: 20px 20px 0;
     background: #f1f2f6;
@@ -782,6 +784,10 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     .full-layout .panel-right{
         overflow-y: hidden;
         height: auto;
+        padding:20px 10px 0;
+    }
+    .background-card{
+        margin-bottom:10px;
     }
     .background-card .mobile-title{
         margin-left:5px;
