--- a/css/resume.css
+++ b/css/resume.css
@@ -19,17 +19,10 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-::-webkit-scrollbar  
-{  
-    width:5px;  
-    height:5px;  
-} 
-/*定义滚动条轨道 内阴影+圆角*/  
 ::-webkit-scrollbar-track  
 {  
     border-radius: 10px;  
-}  
-/*定义滑块 内阴影+圆角*/  
+}   
 ::-webkit-scrollbar-thumb  
 {  
     border-radius: 10px;  
@@ -674,7 +667,8 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     margin: 0;
 }
 .panel-left .profile-card-text .bt{
-    font-size:30px;
+    font-size:25px;
+    margin-bottom:5px;
 }
 .panel-left .contact-details{
     padding-left:30px;
@@ -687,8 +681,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
     -webkit-flex:1;
     flex:1;
     height: 100%;
-    overflow: hidden;
-    overflow-y:auto;
+    overflow: auto;
     box-sizing: border-box;
     padding: 20px 20px 0;
     background: #f1f2f6;
